bad/assign_arr_elem_class_class_down.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_class_down.lat:6:16: [1;31merror: [0;1massigning to `Y` from incompatible type `X`[m
	(new Y[3])[1] = new X;
	              [1;32m^[m
